--- a/Old_Averiest.mw
+++ b/Old_Averiest.mw
@@ -15,15 +15,17 @@ Wieder lig d'r een begraafplaatse mit de graven van ien Britse en twei Kannedese
 De [[streektaal]] van Old Averiest is 't [[Zuudwest-Zuud-Drèents]], det bi'j 't [[Nedersaksisch]] heurt.
 
 ===Citaot===
-:''achter de Wheem, meidoorn
-:'' 't jongenszwiet prikkelt
-:''heur lief en zinne
-:''snoevend naor umdale
+<poem style="margin-left:1.5em; font-style:italic">
+achter de Wheem, meidoorn
+'t jongenszwiet prikkelt
+heur lief en zinne
+snoevend naor umdale
 
-:''de Wildenbarg, gele brem
-:''zij wil zien locht wel stelen
-:''op zuuk naor nectar en meer
-:'' 't hart as 'n gek tekeer
+de Wildenbarg, gele brem
+zij wil zien locht wel stelen
+op zuuk naor nectar en meer
+'t hart as 'n gek tekeer
+</poem>
 
 Uut 't gedicht ''ondergaon [old averiest]'' deur Ria Westerhuis, in ''Drents Letterkundig Tiedschrift Roet'', zummer 2008, blz.22
 
