--- a/Eiffeltoorne.mw
+++ b/Eiffeltoorne.mw
@@ -1,5 +1,6 @@
 [[Bestaand:Toureiffel.jpg|thumb|250px|Eiffeltoorne]]
 [[Bestaand:Tour Eiffel - 20150801 15h30 (10621).jpg|duum]]
+[[File:Eiffel Tower Drone 4k-Qx c1X3zfEc-313-251.webm|thumb|Eiffeltoorne]]
 De '''Eiffeltoorne''' is 't meest opmarkelijke monement van [[Paries]] en een van de meest bezöchen bezienswaordigheden van [[Frankriek]]. De Eiffeltoorne steet an de kaode van de [[Seine]] in 't [[VIIe arrondissement|7e arrondissement]] van Paries.
 
 De Eiffeltoorne is wereldwied 't symbool van Frankriek. 't Wonnen deur veul luui ezien as één van de neet-klassieke wereldwonders. 
