--- a/Sint-Franciscuskaarke_(Grönn).mw
+++ b/Sint-Franciscuskaarke_(Grönn).mw
@@ -1,4 +1,4 @@
 De '''Sint-Franciscuskaarke''' is nen [[Rooms-Katholieke Karke|Rooms-Kattelieke]] [[Kaark (gebouw)|kaarke]] an de Zaagmulderweg in de Neerlaandse stad [[Grunnen (stad)|Grönn]]. 't Gebouw is een van de twee kaarkn dee bruukt wordt duur de Sint-Martinusparochie in Grönn.
 
-[[Kategorie:Grunnen]]
 [[Kategorie:Karkgebouw|Franciscus]]
+[[Kategorie:Grunnen (gemainte)]]
