--- a/Stadjer.mw
+++ b/Stadjer.mw
@@ -5,4 +5,4 @@ Voak wordt t woord ook bruukt om verschil te moaken tussen studìnten (benoam as
 Stadjers hebben as bienoam 'mollebonen'. n Olle schimpnoam veur stadjers zel 'kluinkoppen' west wezen. In de joargang 1804 van t (Grunneger) ''[[Weekblad tot Nut van ’t Algemeen]]'' schreef [[Mattheus van Heyningen Bosch]], alias [[Burgerhart]], dat t n noam was dij Nederlanders (en din benoam [[Vraizen]], [[Geldersen]] en [[Hollanders]]) aan Grunnegers gaven. Veur de noamsverkloaren verwees Burgerhart noar t “zeer krachtig, koppig en smaaklyk bier, dat alleen in deze stadt gebrouwen wordt, en voorheen wyd en zyd verzonden wierd”. Grunnegers waren ooit “grote liefhebbers” van dit bier west en konden der “een aardig schepje” van op.
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Grunnen]]
+[[Kategorie:Grunnen (gemainte)]]
