--- a/Grunnegs_Ontzet.mw
+++ b/Grunnegs_Ontzet.mw
@@ -16,3 +16,4 @@ Ontzetfeesten-521133.ogv|Polygoonjournaal over Bommen Berend in 1965 (01:40)
 [[Kategorie:Geschiednis van Grunnen]]
 [[Kategorie:Hollaandse oorlog]]
 [[Kategorie:Belegeringe]]
+[[Kategorie:Grunnen (gemainte)]]
