--- a/Quedam_narracio.mw
+++ b/Quedam_narracio.mw
@@ -30,3 +30,4 @@ In de Slag bi'j Aone verleur 't zwaorbewaopende leger van de bisschop van Utrech
 [[Categorie:Geschiednis van Grunnen]]
 [[Categorie:Geschiedenis van Oaveriessel]]
 [[Categorie:Geschiedenis van Utrecht]]
+[[Kategorie:Grunnen (gemainte)]]
