--- a/Damsterdaip.mw
+++ b/Damsterdaip.mw
@@ -6,3 +6,5 @@ t '''Damsterdaip''' is n [[knoal (woaterweg)|knoal]] tuzzen [[Grunnen (stad)|Sta
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Woater in Grunnen]]
 [[Kategorie:Kanaal in Nederlaand]]
+[[Kategorie:Emsdelta]]
+[[Kategorie:Grunnen (gemainte)]]
