--- a/Raitdaip.mw
+++ b/Raitdaip.mw
@@ -22,3 +22,4 @@ t Raitdaipdaal, mit noam t gebied tuzzen t [[Van Staarkenbörgknoal]] en t [[Win
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Revier in Nederlaand]]
 [[Kategorie:Woater in Grunnen]]
+[[Kategorie:Grunnen (gemainte)]]
