/* t Stadsgrunnegs vandoag */ kategorie

--- a/Stadsgrunnegs.mw
+++ b/Stadsgrunnegs.mw
@@ -79,3 +79,4 @@ t Maiste Grunnegs in Stad komt van lu dij van t Grunneger platteland in Stad won
 {{Dialekt|gos|Stad}}
 
 [[Kategorie:Grunnegs|*]]
+[[Kategorie:Grunnen (gemainte)]]
