--- a/Hondsrug.mw
+++ b/Hondsrug.mw
@@ -8,3 +8,4 @@ De noam kommt van ''Hunze-rug''. De [[rivier|revier]] de [[Hunze]] lopt ten oost
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Drenthe]]
 [[Kategorie:Streek in Grunnen]]
+[[Kategorie:Grunnen (gemainte)]]
