--- a/RTV_Noord.mw
+++ b/RTV_Noord.mw
@@ -19,3 +19,4 @@ De studio's waren tot [[september]] [[2005]] in t [[Prinsenhof (Grunnen)|Prinsen
 [[Kategorie:Grunnegs_artikel]]
 [[Kategorie:Nederlaanse regionaole omroep]]
 [[Kategorie:Grunnen]]
+[[Kategorie:Grunnen (gemainte)]]
