--- a/Onnen.mw
+++ b/Onnen.mw
@@ -1,4 +1,4 @@
-'''Onnen''' is n [[dörp]]ie in de gemainte [[Hoaren (gemainte)|Hoaren]], legen in de pervinzie [[Grunnen (provinzie)|Grunnen]] in [[Nederlaand]]. In t dörp stoan verschaaidene zainsweerdege [[boerderij|stees]] en n [[poldermeulen]].
+'''Onnen''' is n [[dörp]]ie in de vrougere gemainte [[Hoaren (gemainte)|Hoaren]], legen in de pervinzie [[Grunnen (provinzie)|Grunnen]] in [[Nederlaand]]. In t dörp stoan verschaaidene zainsweerdege [[boerderij|stees]] en n [[poldermeulen]].
 
 Onnen is n [[esdörp]] mit as aigenoardeghaid dat de Onner [[es (geografie)|es]] n huil ìnde boeten t aggelkse dörp ligt, in tieds dat dizzent maistied vlakbie t dörp liggen.
 
@@ -6,3 +6,4 @@ Aan de spoorboan [[Grunnen (stad)|Grunnen]]–[[Azzen]] ligt vlak bie Onnen bie 
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Grunnen (gemainte)]]
