--- a/Krödde_(tiedschrift).mw
+++ b/Krödde_(tiedschrift).mw
@@ -11,3 +11,4 @@ De Grunneger dichters [[Jan Glas]] en [[Aly Freije]], dij baaiden dichtwaark sto
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnegs]]
 [[Kategorie:Nedersaksies tiedschrift]]
+[[Kategorie:Grunnen (gemainte)]]
