--- a/Ten_Post.mw
+++ b/Ten_Post.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:Ten Post - Olle Widde met bijgebouwen.jpg|thumb|Olle Widde]]
 [[Ofbeelding:Ten Post hefbrug.JPG|thumb|Brug over t [[Damsterdaip]]]]
-'''Ten Post''' is n dörp in gemainte [[Ten Boer]] in [[Fivelgo]]. t Heurt bie de gemainte [[Ten Boer]], aan de N360 van [[Grunnen (stad)|Stad]] noar [[Delfziel]] en het om en bie 900 ienwoners. 
+'''Ten Post''' is n dörp in vrougere gemainte [[Ten Boer]] in [[Fivelgo]]. t Heurt bie de gemainte [[Ten Boer]], aan de N360 van [[Grunnen (stad)|Stad]] noar [[Delfziel]] en het om en bie 900 ienwoners. 
 
 ==Webstee==
 * [http://www.tenpost.info/ http://www.tenpost.info/]
@@ -11,3 +11,4 @@
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Grunnen (gemainte)]]
