--- a/De_Pennevogel.mw
+++ b/De_Pennevogel.mw
@@ -41,3 +41,4 @@ Nr. 1 van De Pennevogel uut september 1978 was feilijk 't darde nommer, mar 't e
 
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Nedersaksies tiedschrift]]
+[[Kategorie:Grunnen (gemainte)]]
