/* Uutgaonde verwiezing */ kategorie

--- a/Roet_(tiedschrift).mw
+++ b/Roet_(tiedschrift).mw
@@ -40,3 +40,4 @@ Winnaars van de Reyer Onno van Ettingen-pries hebt ewest:
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Drèents]]
 [[Kategorie:Nedersaksies tiedschrift]]
+[[Kategorie:Grunnen (gemainte)]]
