--- a/Eel-Potterwold.mw
+++ b/Eel-Potterwold.mw
@@ -1,4 +1,4 @@
-'''Eel-Potterwold''' (''Poaterwool, Pôtjerwôlde'') ([[Nederlaans]]: ''Paterswolde'') is n stee in t Nederlaandse prevìnzie [[Drenthe|t Drìnt]], gemainte [[Tynaorl (gemiente)|Tinoarlo]]. n Leuts paart van t durp ligt laangs de Meerweg en ligt in prevìnzie [[Grunnen (provìnzie)|Grunnen]], gemainte [[Hoaren (gemainte)|Hoaren]]. t Antel inwoners op 1 jannewoari 2006: 10.744.
+'''Eel-Potterwold''' (''Poaterwool, Pôtjerwôlde'') ([[Nederlaans]]: ''Paterswolde'') is n stee in t Nederlaandse prevìnzie [[Drenthe|t Drìnt]], gemainte [[Tynaorl (gemiente)|Tinoarlo]]. n Leuts paart van t durp ligt laangs de Meerweg en ligt in prevìnzie [[Grunnen (provìnzie)|Grunnen]], vrougere gemainte [[Hoaren (gemainte)|Hoaren]]. t Antel inwoners op 1 jannewoari 2006: 10.744.
 
 ==t Durp==
 De durpen [[Eel]] en [[Potterwold]] binnen in run van t twintegste eeuw an mekoar gruid. Op de ploatsnoamborden wordt den ok de noam ''Eelde-Paterswolde'' vermeld.
@@ -29,3 +29,5 @@ Even tin zuden van t durp ligt de lochthoaven Groningen Airport Eelde, de groots
 
 [[Kategorie:Grunnegs_artikel]]
 [[Kategorie:Plaots in Drenthe]]
+[[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Grunnen (gemainte)]]
