--- a/Marga_Bult.mw
+++ b/Marga_Bult.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Marga Bult.jpg|thumb|200px|Marga bult]]
+[[Ofbeelding:Marga Bult in 1985.jpg|thumb|200px|Marga Bult]]
 '''Marga Bult''', geboorn as ''Marga Groeneveld'' ([[Lattrop]], [[2 juli|n 2den juli]] [[1956]]) is ne [[Tweante|Tweantse]] [[Zangkeunst|zangeresse]] en [[presentatrise]]. Rechtevoort wont he in [[Deanekaamp]].
 
 ==Loopbaan==
