--- a/Daphne_Bunskoek.mw
+++ b/Daphne_Bunskoek.mw
@@ -1,3 +1,5 @@
+[[Ofbeelding:Daphne Bunskoek (2017).jpg|thumb|Daphne Bunskoek]]
+
 '''Daphne Wilhelmina Bunskoek''' ([[Almelo]], [[22 november]] [[1973]]) is ne [[twente|twentske]] presentatrice en [[akteur|aktrice]].
 
 ==Leavensbeskryving==
