*Empty MediaWiki Message*

--- a/Tenerife.mw
+++ b/Tenerife.mw
@@ -1,3 +1,5 @@
+{{Landtabel|nameinlandstaal=Tenerife|vlagge=Flag_of_Tenerife.svg|wåpen=Coat_of_Arms_of_Tenerife.svg|lokaty=Espa%C3%B1a-Canarias-loc.svg|breyddegråd=28/16//N|längdegråd=16/36//W|km2=2034|höyvdstad=Santa Cruz de Tenerife|inwoaners=966.354 (2020)|tydzone=GMT-1|münteynheid=Euro|valutakode=EUR}}
+
 '''Tenerife''' is et grötste en drokst bevolkede eiland van de [[Kanariese Eiloanden|kanariske eilanden]]. Van de heyle eilandengrup woanet ungeväär 43% van alle lüde hyr. Med ne uppervlakde van 2034 kilometer in et veerkant en 966.354 bewoaners (2020) is et ouk et drokst bevolkede eiland van [[Spanje]] en [[Makaronesie]].
 
 Alle jåren kummet der ungeväär vyv miljoon turisten når Tenerife hen. Et is et meyst besöchtde eiland van de grup, eyne van de vöörnaamste turistentrekkers van Spanje en de wearld. Ouk wördt hyr alle jåren eyne van de grötste karnavalsfeaste hölden, et Karnaval van Santa Cruz de Tenerife.
@@ -16,6 +18,7 @@ De inheymske guanches nöömden et ''achinet'' of ''chenet''. Volgens [[Plinius 
 Ouk sint der andere verklåringen vöär de name bekend. De geskeedkündigen Juan Núñez de la Peña en Tomás Arias Marín de Cubas meynden dat de inheymsken et eiland når de bekende guancheköäning ''Tinerfe'' nöömden. 
 
 ==Geskedenisse==
+[[Bestaand:Tenerife 1861 (OAW).png|duum|411x411px|Teykening van Tenerife in 1861]]
 De öldste spoars van bewoaning dateert uut de 6. eywe vöär Kristus. Dat blikt uut de Guanchegrotten by [[Icod de Los Vinos]] up et noorden van et eiland. Of de eyrste bewoaners in de [[steyntyd]] leavden is betwist. Et kan good weasen dat se gewoan gin metaal kunden vinden, ümdat et eiland weinig mineraalryk is. De lüde leavden van landbouw en veyholderye, mär ouk van visken. Et eiland was verdeyld in meyrere ''menceys'', köäningryken.
 
 De spanjaarden lükkeden et et eiland in [[1496]] in te neamen, al probeerden se et al sou'n 32 jår, vanaf [[1464]]. De spanjaarden assimileerden de guanche voordan meyr döär der med te trouwen en de kinder as spanjaarden up te voden. Andere guanche störven an seekdes as gryp of pokken, wåras se gin weaderstand teagen hadden. Et eiland tröäk migranten uut et heyle spaanske ryk, sou as [[Vlaanderen]], [[Düütskland]] en [[Italie]].
@@ -35,6 +38,7 @@ In de [[jåren dartig]] van de vöärige eywe wör [[Francisco Franco]] statione
 Up den [[27 meert|27. määrt]] van [[1977]] geböärden et slimste vleegtüügungelükke van de geskedenisse up de noordelike luchthaven van Tenerife. Twey Boeing 747s gebröäken de landingsbane in dikken mist en botsden up mekander. 538 lüde kümmen ümme.  
 
 == Landbeskryving ==
+[[Bestaand:La Tarta - Tenerife 02.jpg|duum|377x377px|Pyroklastiske lågen by et uutsichtpünt ''La Tarta'' (Den taarten).]]
 Ungeväär 12 miljoon jår eleaden börsten der in den atlantisken oceaan nen vulkaan uut, wårmed de eyrste bargtöppe van Tenerife boaven water kümmen. Et hüdige eiland wör dree miljoon jår leaden eförmed döärdat de Teide de dree bargkeatens Anaga, Teno en Valle de San Lorenzo samensmöält. Den vulkaan is vanaf de meyste steades up et eiland te seen. Den krater is up syn breydst 17 kilometer lange. Tenerife is et grötste van de Kanariske Eilanden.
 
 === Klimaat ===
