--- a/Wubbo_Ockels.mw
+++ b/Wubbo_Ockels.mw
@@ -11,3 +11,5 @@ Van den [[30 oktober|30. oktober]] töt en med den [[6 oktober|6. oktober]] [[19
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Ruumte]]
+[[Kategorie:Almelo]]
+[[Kategorie:Tukker]]
