--- a/Knoal_(gemainte).mw
+++ b/Knoal_(gemainte).mw
@@ -28,4 +28,4 @@ De gemainte Stadsknoal omvat de volgende ploatsen en gehuchten: [[Barloage]], [[
 {{GemaintesGrunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Knoal| ]]
