--- a/Knoal_(dörp).mw
+++ b/Knoal_(dörp).mw
@@ -10,3 +10,4 @@ t Knoal is, noast [[Em (Drenthe)|Emmen]], t belaangriekste winkelzentrum veur ve
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Knoal]]
