--- a/Veenhuzen_(Stadsknoal).mw
+++ b/Veenhuzen_(Stadsknoal).mw
@@ -4,3 +4,4 @@ Aanders as dat de noam dut vermoeden is Veenhuzen gain [[veenkelonie|veenkolonie
 
 [[Kategorie:Grunnegs_artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Knoal]]
