--- a/Stadsknoal_(knoal).mw
+++ b/Stadsknoal_(knoal).mw
@@ -8,3 +8,4 @@ t Stadsknoal het n lengte van 32 kilometer en is in [[1856]] voltooid.  Deur de 
 [[Kategorie:Grunnegs_artikel]]
 [[Kategorie:Kanaal in Nederlaand]]
 [[Kategorie:Woater in Grunnen]]
+[[Kategorie:Knoal]]
