--- a/Midden-Grunnen.mw
+++ b/Midden-Grunnen.mw
@@ -11,4 +11,4 @@ De gemainte Midden-Grunnen is op 1 jannewoari 2018 ontstoan noa n gemaintelke he
 {{GemaintesGrunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Midden-Grunnen| ]]
