/* Zetelverdailen gemainteroad */ kategorie

--- a/Hoogezaand-Sapmeer.mw
+++ b/Hoogezaand-Sapmeer.mw
@@ -52,3 +52,4 @@ Aan de spoorlien [[Grunnen (stad)|Grunnen]]-[[Schaanze]] liggen 4 [[spoorwegstat
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Midden-Grunnen]]
