--- a/Oldambt_(gemainte).mw
+++ b/Oldambt_(gemainte).mw
@@ -87,4 +87,4 @@ De gemainte het om en noabie 38.000 ienwoners. Hierdeur het de gemainte 25 zetel
 {{Grunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Oldambt (gemainte)| ]]
