--- a/Scheemde.mw
+++ b/Scheemde.mw
@@ -30,3 +30,4 @@ In Kloosterholt bevindt zoch t ''Klokkengieterijmuseum''. Hier is te zain hou [[
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
