/* Boetende hìnwiezen */ kategorie

--- a/Winschoot.mw
+++ b/Winschoot.mw
@@ -45,3 +45,4 @@ Al sinds 1815 wordt op elke eerste moandag van november de Winschoter joarmaarkt
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
