--- a/Reiderlaand_(gemainte).mw
+++ b/Reiderlaand_(gemainte).mw
@@ -89,3 +89,4 @@ Noar aanlaaiden van t gezoamelke projekt Blaauwe Stad harren de  [[Gedeputeerde 
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
