--- a/Blaauwestad.mw
+++ b/Blaauwestad.mw
@@ -3,4 +3,4 @@ De '''Blaauwestad''' of '''Blaauwe Stad''' is n perjekt om in t oosten van [[per
 [[Image:20080926 Blauwe Stad Gn NL.jpg|thumb|left|400px|Informoatsiezentrum Blaauwe Stad (2008)]]
 
 [[Kategorie:Grunnegs_artikel]]
-[[Kategorie:Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
