--- a/Kloosterholt.mw
+++ b/Kloosterholt.mw
@@ -7,3 +7,4 @@ t Loug telt volgens de gegevens van t CBS 1.440 inwoners (2019).
 {{Dialekt|gos}}
 
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
