--- a/Oostwold.mw
+++ b/Oostwold.mw
@@ -10,3 +10,4 @@ t Dörp grenst aan de dörpen [[t Hammerk]] in t noorden, [[Finnerwold]] in t we
 {{Dialekt|gos||Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
