--- a/Westerlij.mw
+++ b/Westerlij.mw
@@ -9,3 +9,4 @@ t Dörp wordt veur t eerst nuimd ien n olle kloosterkroniek onner t joartel [[12
 {{Begin}}{{Dialekt|gos}}
 
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
