/* De gevolgen */ kategorie

--- a/Slag_bie_Kloosterholt.mw
+++ b/Slag_bie_Kloosterholt.mw
@@ -38,3 +38,4 @@ De dood van Adolf van Nassau ien t 4e koeplet van t [[Wilhelmus]] gememoreerd:<b
 [[Kategorie:Geschiednis van Grunnen]]
 [[Kategorie:Veldslag|Kloosterholt]]
 [[Kategorie:16e eeuw]]
+[[Kategorie:Oldambt (gemainte)]]
