--- a/Dollert.mw
+++ b/Dollert.mw
@@ -21,3 +21,5 @@ Laank, laank leden was de Ems nog nait zo boorde groot as dat e nou is. En de Do
 [[Kategorie:Woater in Nedersaksen]]
 [[Kategorie:Oostfraislaand]]
 [[Kategorie:Zee]]
+[[Kategorie:Emsdelta]]
+[[Kategorie:Oldambt (gemainte)]]
