--- a/Tenerife.mw
+++ b/Tenerife.mw
@@ -57,7 +57,7 @@ Döärdat den vülkanisken grund up Tenerife bros is, kan et eiland selv et wein
 
 Döärdat reagen neet reagelmåtig valt en et eiland grillige bargen hevt, doot se der neet an dambouw. Et meyste water (90%) wördt uut brunnen ehaald en uut watergoaten (horisontale tunnels dee as in de vulkane board sint). Dårvan sint der dusende up et eiland. De tunnels sint gevöärlik vöär mensken, ümdat der ouk vulkaniske gassen en karbondiokside in upbouwen künnet, wåran as en menske gauw starvet.
 
-Water is döärgåns van houge kwaliteit. Alle stranden up et eiland hevt et Ministery van Gesundheid en Verbruuk aneweysen as veilig üm te swemmen.
+Uppervlakdewater is döärgåns van houge kwaliteit. Alle stranden up et eiland hevt et Ministery van Gesundheid en Verbruuk aneweysen as veilig üm te swemmen.
 
 === Vervuling en luchtkwaliteit ===
 De kanariske eilanden ståt bekend üm de laege luchtvervuling. Der sint ja weinig fabriken en industry, en de passaatwinden blåset dat beaten vervuling wat det wal is rap vord. Volgens de officiäle informaty van et spaanske Ministery van Gesundheid en Industry is Tenerife eyne van de skounste steades van et land. De luchtvervuling ligt depe under de landelike döärsneyde. Toch sint der wal wat vervulers an te wysen: en öälyraffinaderye by Santa Cruz, termiske stroumcentrales by Las Caletillas en Granadilla, en verkeyr up de weg, wat verstarked wördt döär de vöäle turisten up et eiland. Ümdat der en grout stearenkykerscentrum up Tenerife steyt, wördt de lechtvervuling strak emeaten en reguleerd.
