/* Wat der wieder bij de börg heurt */ kategorie

--- a/Ennemoabörg.mw
+++ b/Ennemoabörg.mw
@@ -28,5 +28,5 @@ Zowal in [[Amsterdam]] as in [[Eindhoown|Eindhoven]] hej een straote die Ennemab
 {{Commonscat|Ennemaborg}}
 
 [[Kategorie:Drèents artikel]]
-[[Kategorie:Grunnen]]
 [[Kategorie:Borg]]
+[[Kategorie:Oldambt (gemainte)]]
