/* Oetgoande hinwiezens */ kategorie

--- a/T_Hoogelaand.mw
+++ b/T_Hoogelaand.mw
@@ -69,4 +69,4 @@ Ien gemainte T Hoogelaand wordt n variaant van t Grunnegs sproken, noamelk t [[H
 {{GemaintesGrunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:T Hoogelaand| ]]
