--- a/Beem.mw
+++ b/Beem.mw
@@ -51,3 +51,4 @@ De gemainte Beem bestait oet volgende ploatsen:
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:T Hoogelaand]]
