--- a/Emsmond.mw
+++ b/Emsmond.mw
@@ -33,3 +33,4 @@ Zainsweerdegheden in de gemainte Emsmond binnen de Grunneger [[Waddenzee]], [[wi
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:T Hoogelaand]]
