--- a/De_Marne.mw
+++ b/De_Marne.mw
@@ -33,3 +33,4 @@ In de gemainte De Marne kin men genieten van de natuur van [[t Hoogelaand]] mit 
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:T Hoogelaand]]
