--- a/Winzum_(Grunnen).mw
+++ b/Winzum_(Grunnen).mw
@@ -38,3 +38,4 @@ De gemainte Winzum omvat ook de volgende plakken: [[Abbeweer]], [[Oadorp]], [[Au
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:T Hoogelaand]]
