--- a/Waarvum.mw
+++ b/Waarvum.mw
@@ -7,3 +7,4 @@ Boven Waarvum ligt de hoaven van [[Noordpolderziel]]. Aan de zuudkaant van Waarv
 [[Kategorie:Grunnegs_artikel]]
 [[Kategorie:Ploats in Grunnen]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:T Hoogelaand]]
