--- a/Laauwersoog.mw
+++ b/Laauwersoog.mw
@@ -7,3 +7,4 @@ Laauwersoog is n wichtege [[visserieje|viskershoaven]] (letterkode: LO) en het n
 
 [[Kategorie:Grunnegs_artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:T Hoogelaand]]
