/* Kluus, kìrk en bedevoart */ kategorie

--- a/Waarfhoezen.mw
+++ b/Waarfhoezen.mw
@@ -14,3 +14,4 @@ Kiek bie [[Ons Laive Vrauw van Besloten Toen]]
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:T Hoogelaand]]
