/* Boetende hìnwiezen */ kategorie

--- a/Onze_Laive_Vraauw_van_de_Besloten_Toen.mw
+++ b/Onze_Laive_Vraauw_van_de_Besloten_Toen.mw
@@ -29,4 +29,4 @@ Een biezunder gebruuk ien Waarfhoezen is t "ruilen van buusdouk." Maria dragt ie
 
 [[Kategorie:Grunnegs_artikel]]
 [[Kategorie:Kristelk klooster]]
-[[Kategorie:Grunnen]]
+[[Kategorie:T Hoogelaand]]
