--- a/Zoltkamp.mw
+++ b/Zoltkamp.mw
@@ -9,3 +9,4 @@ Tot 1969 tou, dou de Laauwerzee ôfsloten wuir, was Zoltkamp n viskershoaven. De
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:T Hoogelaand]]
