/* Boetende ìnwiezen */ kategorie

--- a/Laauwersmeer.mw
+++ b/Laauwersmeer.mw
@@ -22,3 +22,4 @@ Ofbeelding:LauwersmeerSluizen.jpg|Spuuszielen bie t Laauwersmeer
 [[Kategorie:Meer in Nederlaand]]
 [[Kategorie:Waeter in Frieslaand]]
 [[Kategorie:Woater in Grunnen]]
+[[Kategorie:T Hoogelaand]]
