--- a/Röttemerploat.mw
+++ b/Röttemerploat.mw
@@ -7,3 +7,4 @@
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Geografie van Grunnen]]
 [[Kategorie:Nederlaandse waddenailanden]]
+[[Kategorie:T Hoogelaand]]
