--- a/Stivverd.mw
+++ b/Stivverd.mw
@@ -12,3 +12,4 @@ Ook biezunder aan dit dörp is dat t de hoogste [[postkode]] van [[Nederlaand]] 
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:T Hoogelaand]]
