--- a/Veendaam.mw
+++ b/Veendaam.mw
@@ -36,4 +36,4 @@ De gemainte Veendaam omvat de volgende ploatsen: [[Boareveld]], [[Börkomnij]], 
 {{GemaintesGrunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Veendaam| ]]
