--- a/Bosklopper_Gala.mw
+++ b/Bosklopper_Gala.mw
@@ -22,3 +22,4 @@ De Bé Wever Beker is de pebliekspries, woarveur stemd worden kin via de webstee
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Kulturele priezen]]
+[[Kategorie:Veendaam]]
