--- a/Westerkertier_(gemainte).mw
+++ b/Westerkertier_(gemainte).mw
@@ -14,4 +14,4 @@ Verder is n dail van gemainte [[Winzum (gemainte)|Wìnzum]], streek [[Middag]], 
 {{GemaintesGrunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Westerkertier (gemainte)| ]]
+[[Kategorie:Westerkertier (gemainte)| ]]
