--- a/Grodegast.mw
+++ b/Grodegast.mw
@@ -28,3 +28,4 @@ De gemeente Grodegast omvat ook de volgende plakken: [[Doezum]], [[t Foan]], [[G
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
