--- a/De_Penne_(Grönnen).mw
+++ b/De_Penne_(Grönnen).mw
@@ -1,4 +1,4 @@
-'''De Penne''' ([[Nederlaands]]: ''Opende'', [[Westlaauwers Frais|Frais]]: ''De Pein'') is n dörp in de gemainte [[Grodegast]] ([[Westerkwartaar]]) in de provìnzie [[Grunnen (provìnzie)|Grunnen]].
+'''De Penne''' ([[Nederlaands]]: ''Opende'', [[Westlaauwers Frais|Frais]]: ''De Pein'') is n dörp in de vrougere gemainte [[Grodegast]] ([[Westerkwartaar]]) in de provìnzie [[Grunnen (provìnzie)|Grunnen]].
 
 t Is ain van de ainege dörpen in dizze provìnzie woar grotendails [[Westlaauwers Frais|Frais]] ([[Woldfrais]]) sproken wordt. In t Frais wordt t dörp ook wel ''De Grinzer Pein'' nuimd om op dij menair verwarren te veurkommen mit t Fraise dörp Opeinde, ''De Fryske Pein''.
 
@@ -6,3 +6,4 @@ De noam is n verwiezen noar de liggen: ''op'' (= aan) t ''einde'' (ìnde) van de
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
