--- a/Wooldfries.mw
+++ b/Wooldfries.mw
@@ -139,3 +139,4 @@ Tussen et Wooldfries en et [[Kleifries]] komen slechts negentien lexikaole versc
 [[Kategorie:Freesk]]
 [[Kategorie:Streektaol in Frieslaand]]
 [[Kategorie:Streektaol in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
