--- a/Zuudhörn.mw
+++ b/Zuudhörn.mw
@@ -61,3 +61,4 @@ De gemainte Zuudhorn ligt sunt [[1866]] aan de [[treinvervoer|spoorlien]] [[Grun
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
