*Empty MediaWiki Message*

--- a/Zuudhörn.mw
+++ b/Zuudhörn.mw
@@ -33,7 +33,7 @@ De gemainte Zuudhörn omvat ook de volgende ploatsen en stadspaarten: [[Aalsum (
 == Loug Zuudhörn ==
 Zuudhörn en t noordelieker legen Noordhörn binnen rond [[1592]] ontstoan ien n gebied woar de zee aleer oaf en toe over t laand kwam en vruchtboar slib oafzette. Van baaide lougen ligt de keern op n zaandrog van om en bie 4 kilometer, dij t leven hier meugeliek moek. t Dörp wuir geleideliek aan n vestegengsploats veur renteniernde welstelde boern. Zo wuiren ien en rond de ploats 3 [[börg]]en baauwd: de [[Jellemabörg]], [[Klinkemabörg]] en [[Hanckemabörg]]. De letste börg dij oafbroken wuir was de Hanckemabörg om en bie [[1878]]. Van dizze börg is allend t [[skathoes]] overbleven, wat ien [[1965]] herbaauwd wuir. De omtrekken van de börg binnen ien [[1993]] in de omgeveng aangeven deur de Historische Kring Zuudhörn. Dizze börg het laange tied t gezicht van t loug bepoald en t woapen van de [http://www.ngw.nl/z/zuidhorn.htm femilie Hanckema] was tot de gemaintelieke heriendeleng van [[1990]] ook t woapen van t dörp en gemainte. Dizze femilie wordt noameliek verantwoordeliek holden veur de stichteng van t loug.
 
-== Openboar Vervoer ==
+== Openboar vervoer ==
 De gemainte Zuudhorn ligt sunt [[1866]] aan de [[treinvervoer|spoorlien]] [[Grunnen (stad)|Grunneng]]-[[Liwwadden (stad)|Leewerd]], mit stations in Zuudhörn en Gruupskerk. [[Autobus|Buslienen]] in de gemainte binnen:
 * lijn 11: Grunneng-Grunneng Zernike-Zuudhörn
 * lijn 30: Zuudhörn-Noordhörn-Nieziel-Gruupskerk-Viskvliet-Boerum-Munkeziel
