--- a/Leek_(Grunnen).mw
+++ b/Leek_(Grunnen).mw
@@ -10,3 +10,4 @@ Leek het n mooi overdekt winkelcentrum, De Liekeblom. De regionoale scholengemai
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
