--- a/Moarum.mw
+++ b/Moarum.mw
@@ -11,3 +11,4 @@ Ien de gemeente worden twai verschillende toalen proat. Ien t noordoosten wordt 
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
