/* Butende hìnwieze */ Kategorie

--- a/Westerkertiers.mw
+++ b/Westerkertiers.mw
@@ -96,3 +96,4 @@ Verders is ien t Westerkertiers van aal [[Grunnegs]]e dialekten nog de grootste 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnegs|*]]
 [[Kategorie:Streektaol in Frieslaand]]
+[[Kategorie:Westerkertier (gemainte)]]
