--- a/Homsterland.mw
+++ b/Homsterland.mw
@@ -24,3 +24,4 @@ Middag en Homsterland hebben as "[[Middag-Homsterland]]" de stoatus ''Nationaal 
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
