--- a/Westerwoolde_(gemainte).mw
+++ b/Westerwoolde_(gemainte).mw
@@ -11,4 +11,4 @@ De gemainte Westerwoolde is op 1 jannewoari 2018 ontstoan noa n gemaintelke heri
 {{GemaintesGrunnen}}
 
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Gemainte in Grunnen]]
+[[Kategorie:Westerwoolde (gemainte)| ]]
