--- a/Vlagtwedde_(gemainte).mw
+++ b/Vlagtwedde_(gemainte).mw
@@ -50,3 +50,4 @@ t Openboar vervoer in de gemainte Vlagtwedde wordt verzörgd deur de volgende bu
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Vrougere gemainte in Grunnen]]
+[[Kategorie:Westerwoolde (gemainte)]]
