--- a/Vraiskelo.mw
+++ b/Vraiskelo.mw
@@ -1,4 +1,4 @@
-'''Vraiskelo''' ([[Nederlaands]]: ''Vriescheloo'') is n [[darp|loug]] (dörp) ien de gemainte [[Wedde-Bennewold]] ([[Nederlaands]]: Bellingwedde). t Loug haar begun 2005 986 ienwoners.
+'''Vraiskelo''' ([[Nederlaands]]: ''Vriescheloo'') is n [[darp|loug]] (dörp) ien de vrougere gemainte [[Wedde-Bennewold]] ([[Nederlaands]]: Bellingwedde). t Loug haar begun 2005 986 ienwoners.
 
 == Noam en schiednis ==
 Woar de noam Vraiskelo vot komt is nait haildal zeker. Vraiskelo kin verwiezen noar de Vraizen dij zok vestigt hemmen bie t bosk (loo). t Kin ok wezen dat Vraiskelo n verwiezen geft noar n nijer dail van Lutjelo. Lutjelo, ok n lutje loug nait wied vot van Vraiskelo, is n old ploatske en betaikent lutje bosk ([[Nederlaands]]: klein bos). Aan t inde van de middelaiven, dou t klien (veen) veur t mainste dail vot was, verhoesde man zok noar n zandrogge dij bie de dörpstroate lag. Ok de oksediek (ossedijk) haar veul betaikenis ien dij tied. Dizze stroate was n belangrieke handelsroute noar [[Winschoot]], [[Bourtang]] en [[Münster]]. t Loug haar zokzölven vörmt ien de tied van de Franse overheersen mit de 18de aivse kìrke van Vraiskelo as t middelpunt.
@@ -12,3 +12,4 @@ Vraiskeloërs hemmen krekt as aandere dörpslu ok n bienoam. Ain bienoam dij man
 {{Dialekt|gos}}
 
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Westerwoolde (gemainte)]]
