--- a/Oldambtsters.mw
+++ b/Oldambtsters.mw
@@ -73,3 +73,4 @@ t [[Reiderlaands]] is t dialekt dat proat wordt tuzzen de Nederlaands-Duutse sto
 
 {{Dialekt|gos}}
 [[Kategorie:Grunnegs|*]]
+[[Kategorie:Oldambt (gemainte)]]
