--- a/Hoogelaandsters.mw
+++ b/Hoogelaandsters.mw
@@ -73,3 +73,4 @@ t Hogelaandsters het n aantel aigenschoppen dij aander dialekten nait hebben, zo
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnegs|*]]
+[[Kategorie:T Hoogelaand]]
