--- a/Veenkelonioals.mw
+++ b/Veenkelonioals.mw
@@ -72,3 +72,9 @@ Zo as al eer vermèld, wordt veur t [[verklainwoord]] onder aander -chie bruukt.
 
 {{Dialekt|gos|de Veankolonien}}
 [[Kategorie:Grunnegs|*]]
+[[Kategorie:De Pekel]]
+[[Kategorie:Knoal]]
+[[Kategorie:Midden-Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
+[[Kategorie:Veendaam]]
+[[Kategorie:Westerwoolde (gemainte)]]
