--- a/Hassebaarg.mw
+++ b/Hassebaarg.mw
@@ -12,3 +12,4 @@ De heuvel is tegenswoordeg n beschaarmd natuurgebied.
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Geografie van Grunnen]]
 [[Kategorie:Heuvel in Nederlaand]]
+[[Kategorie:Westerwoolde (gemainte)]]
