--- a/Gerecht_(streek).mw
+++ b/Gerecht_(streek).mw
@@ -28,3 +28,5 @@ t Gerecht beston uut de [[Grunnen (stad)|Stad]], mit [[Selwerd]] en [[Paddepoel]
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Grunnen]]
+[[Kategorie:Grunnen (gemainte)]]
+[[Kategorie:Midden-Grunnen]]
