--- a/Raitdaip.mw
+++ b/Raitdaip.mw
@@ -23,3 +23,5 @@ t Raitdaipdaal, mit noam t gebied tuzzen t [[Van Staarkenbörgknoal]] en t [[Win
 [[Kategorie:Revier in Nederlaand]]
 [[Kategorie:Woater in Grunnen]]
 [[Kategorie:Grunnen (gemainte)]]
+[[Kategorie:T Hoogelaand]]
+[[Kategorie:Westerkertier (gemainte)]]
