--- a/Fivelgo.mw
+++ b/Fivelgo.mw
@@ -22,3 +22,6 @@ Rond de [[13e eeuw|13e aiw]] wuiren dizze onderkwartaaiern ofschaft en wuir t go
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Grunnen]]
+[[Kategorie:Emsdelta]]
+[[Kategorie:Grunnen (gemainte)]]
+[[Kategorie:Midden-Grunnen]]
