--- a/Westerkertier.mw
+++ b/Westerkertier.mw
@@ -31,3 +31,4 @@ Westerkertaaier is ook de noam van t vermoalege [[waoterschap|zielvest]], dat gr
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
