--- a/Oldambt_(streek).mw
+++ b/Oldambt_(streek).mw
@@ -17,3 +17,4 @@ t Oldambt kommt tegenswoordeg overain mit t historisch/stoatkundeg gebied mit as
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Streek in Grunnen]]
+[[Kategorie:Oldambt (gemainte)]]
