--- a/Reiderlaand_(streek).mw
+++ b/Reiderlaand_(streek).mw
@@ -28,3 +28,4 @@ t Reiderlaand is veural bekènd worden deurt t bouk '''De Groanrepubliek''' van 
 [[Kategorie:Oostfraislaand]]
 [[Kategorie:Streek in Grunnen]]
 [[Kategorie:Streek in Nedersaksen]]
+[[Kategorie:Oldambt (gemainte)]]
