/* Boetende heenwiezen */ Kategorie

--- a/Westerwoolde_(streek).mw
+++ b/Westerwoolde_(streek).mw
@@ -25,3 +25,4 @@ Ofbeelding:Lokoatsie Westerwolde2.JPG|Geograofisch gebiet Westerwoolde
 {{Dialekt|gos|[[Westerwoolds|Westerwolde]]}}
 
 [[Kategorie:Streek in Grunnen]]
+[[Kategorie:Westerwoolde (gemainte)]]
