--- a/Kiel_(Grunnen).mw
+++ b/Kiel_(Grunnen).mw
@@ -1,4 +1,4 @@
-'''Kiel''' ([[Nederlaands]]: ''Kiel-Windeweer'') is n dörp in de [[provìnzie Grunnen]] ([[Nederlaand]]),  gemeente [[Hoogezaand-Sapmeer]].  
+'''Kiel''' ([[Nederlaands]]: ''Kiel-Windeweer'') is n dörp in de [[provìnzie Grunnen]] ([[Nederlaand]]), vrougere gemeente [[Hoogezaand-Sapmeer]].  
 
 De Nederlaandse noam ''Kiel-Windeweer'' is vörmd deur n soamenvougen van de noamen van de ollere ploatsen De Kiel en Windeweer, dij tegen mekoar aan gruid binnen. In t [[Grunnegs]] wordt de ploats enkeld noar De Kiel vernuimd. 
 
@@ -8,3 +8,4 @@ Van 1812 tot 1821 was t as Windeweer n zölfstandege gemainte.
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Midden-Grunnen]]
