--- a/Noordhorn_(Grunnen).mw
+++ b/Noordhorn_(Grunnen).mw
@@ -1,10 +1,11 @@
 '''Noordhorn''' is n dörp in de provìnzie [[Grunnen (provìnzie)|Grunnen]] te noorden van t [[Van Starkenborghknoal]] mit n inwonertel van om en bie 1600.
 
-t Môkt tegenswoordeg dail uut van de gemainte [[Zuudhorn]].
+t Môkt tegenswoordeg dail uut van de vrougere gemainte [[Zuudhorn]].
 
-De noam Noordhorn betaikent: noordelke houk en is n verwiezen noar de loop van de zaandrog woarop t dörp legen is en dij hier n knik môkt. Op n twaide knik, even te zuden van Noordhorn, ontston t dörp [[Zuudhorn]].
+De noam Noordhorn betaikent: noordelke houk en is n verwiezen noar de loop van de zaandrog woarop t dörp legen is en dij hier n knik môkt. Op n twaide knik, even te zuden van Noordhorn, ontston t dörp Zuudhorn.
 
 Te westen van Noordhorn ligt t [[Norritsveld]]. Hier het zoch tot drij moal tou n veldslag ôfspeuld, onderandere tuzzen [[Schieringers]] en [[Vetkopers]].
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Westerkertier (gemainte)]]
