--- a/Westerdaipsterdale.mw
+++ b/Westerdaipsterdale.mw
@@ -1,4 +1,4 @@
-'''Westerdaipsterdale''' is n buurtschop in de gemainte Veendam, pervinzie Grunnen. De buurtschop ligt ten westen van Wildervank, aan n doodlopende, onverhaarde weg vanòf de Kielsterachterweg. De postadressen van Westerdaipsterdale valen onder t dörp Wildervank.
+'''Westerdaipsterdale''' is n buurtschop in de gemainte [[Veendaam]], pervinzie Grunnen. De buurtschop ligt ten westen van Wildervank, aan n doodlopende, onverhaarde weg vanòf de Kielsterachterweg. De postadressen van Westerdaipsterdale valen onder t dörp Wildervank.
 Mit bloots twij hoezen is Westerdaipsterdale t klaainste dörp van Nederland. In t vleden stonden der zes hoezen, mor in verbaand mit de ruilverkoaveln binnen vaaier hoezen òfbroken. De buurtschop kwam in 1984 in t Guiness Book of Records as klaainste ploats in Nederland, omreden dat der doudestieds bloots ain inwoner was. Op t heden is ook t twijde hoes bewoond en binnen der vief inwoners.
 
 In 2007 komt Westerdaipsterdale in t nijs as 'Asterix en Obelixdörp' as d'inwoners n miljounenprejekt aangoande n voarverbinden tussen Veendam en t Zuudloardermeer waiten te onderbreken. De bewoners verzetten zoch tegen d'aanleg van n nije voart en de kap van 120 bomen. Volgens heur zollen veul van de bomen meer as 40 joar old wezen en zol deur de kap van dizze bomen t oetzicht bedurven worden. t Prejekt wer oetsteld, mor loater is de voart toch aanlegd en binnen de bomen ook kapt. In 2009 was t Westerdaipsterdalkenoal kloar. Dit kenoal verbindt t Langebosschemeer in t westen van Wildervank mit t Kieldaip dat deur Kiel-Windeweer lopt. Hiermit is Veendam aansloten op de rekreoatieve voarverbinden tussen Oost-Grunnen en t Zuidlaardermeer.
@@ -12,5 +12,7 @@ Op [[Erwin de Vries]] zien album ''Aigenhaimer'' (2006) staait t nummer ''Wies m
 [[Jan Henk de Groot]] het zien album ''Keunenk van Westerdaipsterdale'' (2016) opnomen bie Bonney Brattinga, dij in 1984 d'ainegste bewoner van Westerdaipsterdale was. De tuddel van t album is n eerbetoon aan Brattinga, net as t van dit album òfkomstege nummer ''Bonney''. Bie t nummer ''Evenwicht'', ook van dit album, is n videoclip opnomen mit beelden van Westerdaipsedale.
 
 De Vries en De Groot bruken nait dezulfde schriefwieze veur de ploatsnoam. In de Grunneger woordenbouken wordt de ploats nait nuimd. Volgens t ''Groninger Zakwoordenboek'' van perf. dr. Siemon Reker wordt de noam Wildervanksterdallen in t Grunnegs slichtweg vertoald as ''Dale''. Doaruut kin je opmoaken dat ''Westerdaipsterdale'' de juuste schriefwieze wezen zel.
+
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Ploats in Grunnen]]
+[[Kategorie:Veendaam]]
