--- a/Laauwers.mw
+++ b/Laauwers.mw
@@ -19,3 +19,4 @@ De [[geul]] tuzzen [[Schiermonnikoog (eilaand)|Aailaand]] en [[Röttumerploat]] 
 [[Kategorie:Revier in Nederlaand]]
 [[Kategorie:Woater in Grunnen]]
 [[Kategorie:Waeter in Frieslaand]]
+[[Kategorie:Westerkertier (gemainte)]]
