--- a/Stadsknoal_(knoal).mw
+++ b/Stadsknoal_(knoal).mw
@@ -9,3 +9,4 @@ t Stadsknoal het n lengte van 32 kilometer en is in [[1856]] voltooid.  Deur de 
 [[Kategorie:Kanaal in Nederlaand]]
 [[Kategorie:Woater in Grunnen]]
 [[Kategorie:Knoal]]
+[[Kategorie:Veendaam]]
