/* Waor of 't Noaberpad langes kump */ Kategorie

--- a/Noaberpad.mw
+++ b/Noaberpad.mw
@@ -25,3 +25,4 @@ De route is op 20 oktober 1995 lös edaone, waorbij der 28 [[ieke]]n eplaant wö
 [[Kategorie:Weg in Gelderlaand]]
 [[Kategorie:Weg in Limbörg (Nederlaand)]]
 [[Kategorie:Geografie van Duutslaand]]
+[[Kategorie:Westerwoolde (gemainte)]]
