/* Gebieden waor Portugees praot wodt */

--- a/Portugees.mw
+++ b/Portugees.mw
@@ -1,7 +1,7 @@
 '''Portugees''' is een [[Romaanse tael|Romaanse]] [[taol|wereldtael]] die praot wodt in [[Portugal]], [[Brazilië]], [[Angola]], [[Guinee-Bissau]], [[Sao Tomé en Principe]], [[Oost-Timor]], [[Kaapverdië]], [[Mozambique]], en aandere gebieden, zoas [[Goa (dielstaot)|Goa]] en [[Malakka (staot)|Malakka]] ([[Cristao]]). Et wodt ok praot deur een minderhied in [[Macao]], waor et een officiële tael is. In [[Galicië (Spanje)|Galicië]], een gebied in [[Spanje]] in et noorden van [[Portugal]], wodt ''Galego'' ([[Galicisch]]) praot; officieel een aandere tael, mar et liekt slim op et Portugees. Et [[Braziliaans]] verschilt veul van et Europese Portugees. De Portugeessprekende lanen warken op taelgebied tegere in de ''Gemienschop van Portugeessprekende lanen''.
 
 == Gebieden waor Portugees praot wodt ==
-[[Bestaand:Map-Lusophone World-en.png|right|350px|Portugese tael op eerde]]
+[[Bestaand:Detailed SVG map of the Lusophone world.svg|right|350px|Portugese tael op eerde]]
 '''As nationaole tael:'''
 # [[Brazilië]]
 # [[Portugal]]
