Verwysing nå döärverwyssyde repareerd ([[Pekel]] nå [[De Pekel]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Nij_Pekel.mw
+++ b/Nij_Pekel.mw
@@ -2,7 +2,7 @@
 | soorte = Dörp
 | naam = Nij Pekel
 | region = NL-GR
-| gemeente = [[Pekel]]
+| gemeente = [[De Pekel]]
 | inwoners = 4060
 | doatum inwoners = 2008
 | öppervlakte = 11,27
