--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -621,8 +621,9 @@ Bestaand:A28 Verzorgingsplaats Witte Molen.JPG|Tussen de '''ofslagen 37 en 38'''
 {{Verzörgingsplaatsen Rieksweg 28}}
 
 [[Kategorie:Rieksweg 28| ]]
-[[Kategorie:Weg in Oaveriessel]]
-[[Kategorie:Weg in Gelderlaand]]
 [[Kategorie:Weg in Utrecht]]
+[[Kategorie:Weg in Gelderlaand]]
+[[Kategorie:Weg in Oaveriessel]]
 [[Kategorie:Weg in Dreanthe]]
 [[Kategorie:Weg in Grönningen]]
+[[Kategorie:Grunnen (gemainte)]]
