/* Zai ook */ kategorie

--- a/Grunneger_gerechten_en_streekprodukten.mw
+++ b/Grunneger_gerechten_en_streekprodukten.mw
@@ -102,7 +102,5 @@ Thoes wordt en wör deurentieds nait voak n veurgerecht nomen. Allend mit spesjo
 ==Zai ook==
 *[[Nedersaksische gerechten]]
 
-{{DEFAULTSORT:Grunneger Gerechten En Streekprodukten}}
 [[Kategorie:Grunnegs artikel]]
-[[Kategorie:Grunnen|Gerechten En Streekprodukten]]
-[[Kategorie:Grunnegs gerecht|!!]]
+[[Kategorie:Grunnegs gerecht| ]]
