*Empty MediaWiki Message*

--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Grönnen koart.jpg|right|250px|thumb|Koart van Grunnen mit de Oldambtsterse noamen]]
 Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|Grunnegse]] gemainte de plakken, gehuchten, noaberschoppen en streken op alfabetische volgorde van de Nederlaandse noam. De plakken in t Reiderlaand ([[Oostfraislaand]]), Kölmerlaand ([[Frieslaand|Westlaauwers Fraislaand]]) en t Noordvèld (Drìnthe) worden ook nuimd. Zai ook [[Grunnegs (geogroafisch)]] veur plaknoamen en gebiedsnoamen boeten t Grunnegstoalege gebied.
 
-== Gemainte Beem ==
+== Veurm. gemainte Beem ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -57,7 +57,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zuudwôlster
 |}
 
-== Gemainte n Daam ==
+== Veurm. gemainte n Daam ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -101,7 +101,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Tjamsweerster
 |}
 
-== Gemainte Delfziel ==
+== Veurm. gemainte Delfziel ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -197,7 +197,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Woldendörpster
 |}
 
-== Gemainte Emsmond/ Emslaand ==
+== Veurm. gemainte Emsmond/ Emslaand ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -333,7 +333,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zeuvenhoezer
 |}
 
-== Gemainte Grotegast ==
+== Veurm. gemainte Grotegast ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -457,7 +457,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Vaaierverloatster
 |}
 
-== Gemainte Hoaren ==
+== Veurm. gemainte Hoaren ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -590,7 +590,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Weskenhuzener
 |}
 
-== Gemainte De Lieke ==
+== Veurm. gemainte De Lieke ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -630,7 +630,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zeuvenhuzener
 |}
 
-== Gemainte Loppersom ==
+== Veurm. gemainte Loppersom ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -750,7 +750,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zieldiekster
 |}
 
-== Gemainte Marne ==
+== Veurm. gemainte Marne ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -1118,7 +1118,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zuudbrouk
 |}
 
-== Gemainte Moarum ==
+== Veurm. gemainte Moarum ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -1346,7 +1346,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Woarster
 |}
 
-== Gemainte Tin Boer ==
+== Veurm. gemainte Tin Boer ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -1733,7 +1733,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |
 |}
 
-== Gemainte Wìnzum ==
+== Veurm. gemainte Wìnzum ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -1896,7 +1896,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |'t Wildeveld
 |}
 
-== Gemainte Zuudhörn ==
+== Veurm. gemainte Zuudhörn ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
