*Empty MediaWiki Message*

--- a/Grunnegse_plaknoamen.mw
+++ b/Grunnegse_plaknoamen.mw
@@ -1,63 +1,41 @@
 [[Ofbeelding:Grönnen koart.jpg|right|250px|thumb|Koart van Grunnen mit de Oldambtsterse noamen]]
 Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|Grunnegse]] gemainte de plakken, gehuchten, noaberschoppen en streken op alfabetische volgorde van de Nederlaandse noam. De plakken in t Reiderlaand ([[Oostfraislaand]]), Kölmerlaand ([[Frieslaand|Westlaauwers Fraislaand]]) en t Noordvèld (Drìnthe) worden ook nuimd. Zai ook [[Grunnegs (geogroafisch)]] veur plaknoamen en gebiedsnoamen boeten t Grunnegstoalege gebied.
 
-== Veurm. gemainte Beem ==
+== Gemainte De Pekel ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
 ! width="15%" |Nederlaands
 ! width="15%" |Ienwoner
 |-
-|[[Beem]] ([be.m]
-|Bedum
-|Beemster
+|Aalteveer 
+|Alteveer 
+|Aalterveerster
 |-
-|[[Ellerhoezen]]
-|Ellerhuizen
-|Ellerhoezer
+|Boven Pekel
+|Boven Pekela
+|Boven Pekelder
 |-
-|Keunenslege
-|Koningslaagte
-|Keunensleegster
+|Bronsveen
+|Bronsveen
+|Bronsveenster
 |-
-|Mìnkeweer
-|Menkeweer
-|Mìnkeweerster
+|Hoetmansmeer
+|Hoetmansmeer 
+|Hoetmansweer
 |-
-|Noordwôlde
-|Noordwolde
-|Noordwôlster
+|Nijpekel 
+|Nieuwe Pekela
+|Nijpekelder 
 |-
-|Onderndaam
-|Onderdendam
-|Onderndaamster
-|-
-|Rowôlde
-|Rodewolt
-|Rowôlster
-|-
-|Sunt Annerhoeskes
-|Sint-Annerhuisjes
-|Sunt Annerhoesker
-|-
-|Ter Loan
-|Ter Laan
-|Ter Loanster
-|-
-|Diekshörn
-|Westerdijkshorn
-|Diekshörnster
-|-
-|Wilmstreek
-|Willemstreek
-|Wilmstreeker
-|-
-|Zuudwôlde
-|Zuidwolde
-|Zuudwôlster
+|Olpekel
+|Oude Pekela
+|Olpekelder
 |}
 
-== Veurm. gemainte n Daam ==
+== Gemainte Emsdelta ==
+
+=== Veurm. gemainte n Daam ===
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -101,7 +79,7 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Tjamsweerster
 |}
 
-== Veurm. gemainte Delfziel ==
+=== Veurm. gemainte Delfziel ===
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
 ! width="15%" |Grunnegs
@@ -195,6 +173,182 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Woldendörp
 |Woldendorp
 |Woldendörpster
+|}
+
+=== Veurm. gemainte Loppersom ===
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+! width="15%" |Ienwoner
+|-
+|Aikwerd 
+|Eekwerd
+|Aikwerder
+|-
+|Aikwerderdraai
+|Eekwerderdraai
+|Draaister
+|-
+|Ainum
+|Eenum
+|Ainumer
+|-
+|Froamklap
+|Fraamklap 
+|Froamklapster
+|-
+|Garrelsweer
+|Garrelsweer 
+|Garrelsweerster
+|-
+|Gaasthoezen
+|Garsthuizen 
+|Gaasthoezer
+|-
+|Houksmeer
+|Hoeksmeer 
+|Houksmeerder
+|-
+|Hondert
+|Honderd 
+|Hondertster
+|-
+|Hoezen
+|Huizinge 
+|Hoezener
+|-
+|Kolle
+|Kolhol
+|Kolster
+|-
+|Leerms
+|Leermens
+|Leermster
+|-
+|Loppersom
+|Loppersum 
+|Lopster
+|-
+|Lutjeriep
+|Lutjerijp 
+|Lutjeriepster
+|-
+|Lutjewijtwerd
+|Lutjewijtwerd
+|Lutjewijtwerder
+|-
+|Mijrum
+|Merum 
+|Mijrumer
+|-
+|Middelstom
+|Middelstum 
+|Middelstomster
+|-
+|Oostwijtwerd
+|Oosterwijtwerd
+|Oostwijtwerder
+|-
+|Staartenhoezen
+|Startenhuizen 
+|Staartenhoezener
+|-
+|Stedum
+|Stedum 
+|Stedumer
+|-
+|Störk
+|Stork 
+|Störker
+|-
+|Toornwerd
+|Toornwerd 
+|Toornwerder
+|-
+|Westeremden
+|Westeremden 
+|Westeremder
+|-
+|Westwijtwerd
+|Westerwijtwerd 
+|Westerwijtwerder
+|-
+|Wirdum
+|Wirdum
+|Wirdumer
+|-
+|Wirdumerdraai 
+|Wirdumerdraai 
+|Wirdumerdraaister
+|-
+|t Saand
+|'t Zandt 
+|Saandster
+|-
+|Zeeriep
+|Zeerijp 
+|(Zee)ziepster
+|-
+|Zieldiek
+|Zijldijk
+|Zieldiekster
+|}
+
+== Veurm. gemainte Beem ==
+{| {{prettytable}} width="60%"
+|- style="background: #efefef;"
+! width="15%" |Grunnegs
+! width="15%" |Nederlaands
+! width="15%" |Ienwoner
+|-
+|[[Beem]] ([be.m]
+|Bedum
+|Beemster
+|-
+|[[Ellerhoezen]]
+|Ellerhuizen
+|Ellerhoezer
+|-
+|Keunenslege
+|Koningslaagte
+|Keunensleegster
+|-
+|Mìnkeweer
+|Menkeweer
+|Mìnkeweerster
+|-
+|Noordwôlde
+|Noordwolde
+|Noordwôlster
+|-
+|Onderndaam
+|Onderdendam
+|Onderndaamster
+|-
+|Rowôlde
+|Rodewolt
+|Rowôlster
+|-
+|Sunt Annerhoeskes
+|Sint-Annerhuisjes
+|Sunt Annerhoesker
+|-
+|Ter Loan
+|Ter Laan
+|Ter Loanster
+|-
+|Diekshörn
+|Westerdijkshorn
+|Diekshörnster
+|-
+|Wilmstreek
+|Willemstreek
+|Wilmstreeker
+|-
+|Zuudwôlde
+|Zuidwolde
+|Zuudwôlster
 |}
 
 == Veurm. gemainte Emsmond/ Emslaand ==
@@ -630,126 +784,6 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |Zeuvenhuzener
 |}
 
-== Veurm. gemainte Loppersom ==
-{| {{prettytable}} width="60%"
-|- style="background: #efefef;"
-! width="15%" |Grunnegs
-! width="15%" |Nederlaands
-! width="15%" |Ienwoner
-|-
-|Aikwerd 
-|Eekwerd
-|Aikwerder
-|-
-|Aikwerderdraai
-|Eekwerderdraai
-|Draaister
-|-
-|Ainum
-|Eenum
-|Ainumer
-|-
-|Froamklap
-|Fraamklap 
-|Froamklapster
-|-
-|Garrelsweer
-|Garrelsweer 
-|Garrelsweerster
-|-
-|Gaasthoezen
-|Garsthuizen 
-|Gaasthoezer
-|-
-|Houksmeer
-|Hoeksmeer 
-|Houksmeerder
-|-
-|Hondert
-|Honderd 
-|Hondertster
-|-
-|Hoezen
-|Huizinge 
-|Hoezener
-|-
-|Kolle
-|Kolhol
-|Kolster
-|-
-|Leerms
-|Leermens
-|Leermster
-|-
-|Loppersom
-|Loppersum 
-|Lopster
-|-
-|Lutjeriep
-|Lutjerijp 
-|Lutjeriepster
-|-
-|Lutjewijtwerd
-|Lutjewijtwerd
-|Lutjewijtwerder
-|-
-|Mijrum
-|Merum 
-|Mijrumer
-|-
-|Middelstom
-|Middelstum 
-|Middelstomster
-|-
-|Oostwijtwerd
-|Oosterwijtwerd
-|Oostwijtwerder
-|-
-|Staartenhoezen
-|Startenhuizen 
-|Staartenhoezener
-|-
-|Stedum
-|Stedum 
-|Stedumer
-|-
-|Störk
-|Stork 
-|Störker
-|-
-|Toornwerd
-|Toornwerd 
-|Toornwerder
-|-
-|Westeremden
-|Westeremden 
-|Westeremder
-|-
-|Westwijtwerd
-|Westerwijtwerd 
-|Westerwijtwerder
-|-
-|Wirdum
-|Wirdum
-|Wirdumer
-|-
-|Wirdumerdraai 
-|Wirdumerdraai 
-|Wirdumerdraaister
-|-
-|t Saand
-|'t Zandt 
-|Saandster
-|-
-|Zeeriep
-|Zeerijp 
-|(Zee)ziepster
-|-
-|Zieldiek
-|Zijldijk
-|Zieldiekster
-|}
-
 == Veurm. gemainte Marne ==
 {| {{prettytable}} width="60%"
 |- style="background: #efefef;"
@@ -1156,38 +1190,6 @@ Dizze liest van '''[[Grunnegs]]e plaknoamen''' bevat per [[Grunnen (provìnzie)|
 |De Wilp
 |De Wilp
 |Wilpster
-|}
-
-== Gemainte De Pekel ==
-{| {{prettytable}} width="60%"
-|- style="background: #efefef;"
-! width="15%" |Grunnegs
-! width="15%" |Nederlaands
-! width="15%" |Ienwoner
-|-
-|Aalteveer 
-|Alteveer 
-|Aalterveerster
-|-
-|Boven Pekel
-|Boven Pekela
-|Boven Pekelder
-|-
-|Bronsveen
-|Bronsveen
-|Bronsveenster
-|-
-|Hoetmansmeer
-|Hoetmansmeer 
-|Hoetmansweer
-|-
-|Nijpekel 
-|Nieuwe Pekela
-|Nijpekelder 
-|-
-|Olpekel
-|Oude Pekela
-|Olpekelder
 |}
 
 == Gemainte Oldambt ==
